--- a/opengl_demo.vcproj
+++ b/opengl_demo.vcproj
@@ -40,6 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="D:\OpenGL\INCLUDE"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -60,8 +61,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="Glu32.lib Opengl32.lib"
+				AdditionalDependencies="Glu32.lib Opengl32.lib glew32.lib"
 				LinkIncremental="2"
+				AdditionalLibraryDirectories="D:\OpenGL\LIB"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
@@ -116,6 +118,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalIncludeDirectories="D:\OpenGL\INCLUDE"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
@@ -134,8 +137,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="Glu32.lib Opengl32.lib"
+				AdditionalDependencies="Glu32.lib Opengl32.lib glew32.lib"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="D:\OpenGL\LIB"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -180,12 +184,6 @@
 				RelativePath=".\main.cpp"
 				>
 			</File>
-		</Filter>
-		<Filter
-			Name="Í·ÎÄ¼þ"
-			Filter="h;hpp;hxx;hm;inl;inc;xsd"
-			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
-			>
 		</Filter>
 		<Filter
 			Name="gl_draw"
