--- a/opengl_demo.vcproj
+++ b/opengl_demo.vcproj
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="gb2312"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="opengl_demo"
 	ProjectGUID="{D5D0E55C-04E1-43B6-81E9-C0FB7BE7520D}"
 	RootNamespace="opengl_demo"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -66,6 +67,8 @@
 				AdditionalLibraryDirectories="D:\OpenGL\LIB"
 				GenerateDebugInformation="true"
 				SubSystem="2"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -85,9 +88,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -144,6 +144,8 @@
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -163,9 +165,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -196,6 +195,14 @@
 				RelativePath=".\gl_draw\gl_on_draw.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\gl_draw\MultiSample.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\gl_draw\MultiSample.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="timer"
@@ -218,6 +225,18 @@
 			</File>
 			<File
 				RelativePath=".\test\draw_test.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="utils"
+			>
+			<File
+				RelativePath=".\utils\utils.cc"
+				>
+			</File>
+			<File
+				RelativePath=".\utils\utils.h"
 				>
 			</File>
 		</Filter>
